# mahjong_calc_score

./: Cargo.toml
mahjong_core/: Cargo.toml
mahjong_core/src/: decompose.rs  dora.rs  engine.rs  fu.rs  lib.rs  points.rs  score.rs  special.rs  tile.rs  yaku.rs
mahjong_web/: Cargo.toml
mahjong_web/src/: main.rs
mahjong_web/static/: app.js  index.html
